fix(style): fix word nowrap

--- a/assets/theme/index.scss
+++ b/assets/theme/index.scss
@@ -148,6 +148,7 @@
     line-height: 1.7em;
     white-space: pre-wrap;
     word-wrap: break-word;
+    word-break:break-all;
     overflow: auto;
 
     code {
